--- a/L.A.G.O.R.R.A/L.A.G.O.R.R.A.csproj
+++ b/L.A.G.O.R.R.A/L.A.G.O.R.R.A.csproj
@@ -64,6 +64,7 @@
     <Compile Include="LoggedTime.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Time.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="WorkedDay.cs" />
     <Compile Include="WorkerRegisteredEntriesExcelFileParser.cs" />
