WorkerRegisteredEntry renamed to WorkerTimeEntry

--- a/L.A.G.O.R.R.A/L.A.G.O.R.R.A.csproj
+++ b/L.A.G.O.R.R.A/L.A.G.O.R.R.A.csproj
@@ -68,7 +68,7 @@
     <Compile Include="Utilities.cs" />
     <Compile Include="WorkedDay.cs" />
     <Compile Include="WorkerRegisteredEntriesExcelFileParser.cs" />
-    <Compile Include="WorkerRegisteredEntry.cs" />
+    <Compile Include="WorkerTimeEntry.cs" />
     <Compile Include="WorkerWorkingPeriod.cs" />
   </ItemGroup>
   <ItemGroup>
