LoggedTime class renamed to Time

--- a/L.A.G.O.R.R.A/L.A.G.O.R.R.A.csproj
+++ b/L.A.G.O.R.R.A/L.A.G.O.R.R.A.csproj
@@ -61,7 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Excel.cs" />
-    <Compile Include="LoggedTime.cs" />
+    <Compile Include="Time.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities.cs" />
