--- a/L.A.G.O.R.R.A.Test/L.A.G.O.R.R.A.Test.csproj
+++ b/L.A.G.O.R.R.A.Test/L.A.G.O.R.R.A.Test.csproj
@@ -44,6 +44,7 @@
     <ItemGroup>
         <Compile Include="TimeTests.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="WorkerTimeEntryTests.cs" />
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\L.A.G.O.R.R.A\L.A.G.O.R.R.A.csproj">
