WorkingPeriod logic extracted to WorkingPeriodsExcelWriter class

--- a/L.A.G.O.R.R.A/L.A.G.O.R.R.A.csproj
+++ b/L.A.G.O.R.R.A/L.A.G.O.R.R.A.csproj
@@ -69,6 +69,7 @@
     <Compile Include="WorkerTimeEntriesExcelFileParser.cs" />
     <Compile Include="WorkerTimeEntry.cs" />
     <Compile Include="WorkerWorkingPeriod.cs" />
+    <Compile Include="WorkingPeriodsExcelWriter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
